Update bug report template with emoji and label change

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,6 @@
-name: "Bug Report"
+name: "🐞Bug Report"
 description: Create a report to help us improve
-labels: ['🐛 Bug']
-type: Bug
+labels: ['bug']
 body:
 - type: textarea
   attributes:
