--- a/.github/ISSUE_TEMPLATE/2-bug_report_zhcn.yml
+++ b/.github/ISSUE_TEMPLATE/2-bug_report_zhcn.yml
@@ -1,14 +1,7 @@
-name: "🐞报告Bug (中文)"
+name: 🐞报告Bug (中文)
 description: 报告你遇到的问题。
-labels: ['bug']
+labels: ['🐞Bug']
 body:
-- type: textarea
-  attributes:
-    label: 描述
-    description: 请尽可能详细的描述你遇到的问题。
-  validations:
-    required: true
-
 - type: dropdown
   id: flavor
   attributes:
@@ -29,12 +22,10 @@ body:
 
 - type: textarea
   attributes:
-    label: Lua错误
-    description: |
-      是否有任何错误信息？如果你没有看见任何错误信息, 请确保已启用错误日志(`/console scriptErrors 1`)或安装了[BugSack](https://www.curseforge.com/wow/addons/bugsack)和[BugGrabber](https://www.curseforge.com/wow/addons/bug-grabber)插件。
-    render: Text
+    label: 描述
+    description: 请尽可能详细的描述你遇到的问题。
   validations:
-    required: false
+    required: true
 
 - type: textarea
   attributes:
@@ -47,6 +38,15 @@ body:
       4. See error
   validations:
     required: true
+
+- type: textarea
+  attributes:
+    label: Lua错误
+    description: |
+      是否有任何错误信息？如果你没有看见任何错误信息, 请确保已启用错误日志(`/console scriptErrors 1`)或安装了[BugSack](https://www.curseforge.com/wow/addons/bugsack)和[BugGrabber](https://www.curseforge.com/wow/addons/bug-grabber)插件。
+    render: Text
+  validations:
+    required: false
 
 - type: input
   attributes:
